docs: add Java 21 JVM flags section for runtime reflection plugins